checking for duplicates
