# broker-service/cmd/api/docs/swagger.json
@@ -56,6 +56,12 @@
                         "schema": {
                             "$ref": "#/definitions/main.jsonResponse"
                         }
+                    },
+                    "401": {
+                        "description": "Invalid credentials",
+                        "schema": {
+                            "$ref": "#/definitions/main.jsonResponse"
+                        }
                     }
                 }
             }
